--- a/frontend/src/locales/ru.json
+++ b/frontend/src/locales/ru.json
@@ -225,4 +225,21 @@
     "serverError": "Ошибка сервера.",
     "rateLimitExceeded": "Слишком много попыток. Попробуйте позже."
   }
+
+  ,"footer": {
+    "privacy": "Политика конфиденциальности",
+    "terms": "Условия использования"
+  },
+
+  "legal": {
+    "privacyTitle": "Политика конфиденциальности",
+    "privacyP1": "Эта Политика конфиденциальности объясняет, как Портал Понг (\"Сервис\") собирает, использует и раскрывает информацию. Мы собираем только те данные, которые необходимы для предоставления и улучшения Сервиса, такие как информация учётной записи (электронная почта, имя пользователя) и загрузки аватаров. Мы не продаём персональные данные.",
+    "privacyP2": "Мы используем cookies и аналогичные технологии для управления сессиями и сохранения предпочтений. Сторонние сервисы (например, аналитика, OAuth-провайдеры) могут собирать данные в соответствии со своими политиками. Вы можете запросить удаление своей учётной записи и персональных данных, связавшись с нами.",
+    "privacyContact": "Если у вас есть вопросы по этой политике, свяжитесь с нами через репозиторий проекта",
+
+    "termsTitle": "Условия использования",
+    "termsP1": "Используя Портал Понг, вы соглашаетесь соблюдать настоящие Условия. Вы несёте ответственность за сохранение конфиденциальности своей учётной записи и за все действия, совершённые от её имени. Не используйте Сервис в незаконных целях.",
+    "termsP2": "Мы оставляем за собой право приостановить или прекратить учётные записи, нарушающие эти Условия. Сервис предоставляется как есть; мы максимально исключаем гарантии в пределах, разрешённых законом.",
+    "termsContact": "Если у вас есть вопросы по этим условиям, свяжитесь с поддержкой проекта"
+  }
 }
