--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -105,7 +105,12 @@
     "playerPlaceholder": "Player {{i}} name",
     "emptyNames": "All player names must be non-empty",
     "duplicateNames": "All player names must be unique",
-    "setupFailed": "Tournament setup failed"
+    "setupFailed": "Tournament setup failed",
+    "bracket": "Tournament Bracket",
+    "currentMatch": "Current Match",
+    "round": "Round",
+    "semiFinal": "Semi-Final",
+    "final": "Final"
   },
 
   "profile": {
