fix: update Russian localization for game start prompt and enhance button control handling in Pong

--- a/frontend/src/locales/ru.json
+++ b/frontend/src/locales/ru.json
@@ -81,7 +81,7 @@
     "instanceNotCreated": "Экземпляр Понга не создан.",
     "gameError": "Ошибка игры",
     "waitingForOpponent": "Ожидание соперника...",
-    "waitingForStart": "Нажмите Start Game, когда будете готовы",
+    "waitingForStart": "Нажмите «Начать игру», когда будете готовы",
     "youWon": "🎉 Вы выиграли!",
     "youLost": "😢 Вы проиграли!",
     "gameOver": "Игра окончена",
