--- a/frontend/src/locales/ru.json
+++ b/frontend/src/locales/ru.json
@@ -244,7 +244,7 @@
   "legal": {
     "privacyTitle": "Политика конфиденциальности",
     "privacyP1": "Эта Политика конфиденциальности объясняет, как Портал Понг (\"Сервис\") собирает, использует и раскрывает информацию. Мы собираем только те данные, которые необходимы для предоставления и улучшения Сервиса, такие как информация учётной записи (электронная почта, имя пользователя) и загрузки аватаров. Мы не продаём персональные данные.",
-    "privacyP2": "Мы используем cookies и аналогичные технологии для управления сессиями и сохранения предпочтений. Сторонние сервисы (например, аналитика, OAuth-провайдеры) могут собирать данные в соответствии со своими политиками. Вы можете запросить удаление своей учётной записи и персональных данных, связавшись с нами.",
+    "privacyP2": "Мы используем cookies и аналогичные технологии для управления сессиями и сохранения предпочтений. Сторонние сервисы (например, аналитика) могут собирать данные в соответствии со своими политиками. Вы можете запросить удаление своей учётной записи и персональных данных, связавшись с нами.",
     "privacyContact": "Если у вас есть вопросы по этой политике, свяжитесь с нами через репозиторий проекта",
 
     "termsTitle": "Условия использования",
