--- a/frontend/src/locales/de.json
+++ b/frontend/src/locales/de.json
@@ -66,7 +66,8 @@
     "invalidUsername": "Ungültiger Benutzername. Verwende 3-15 Zeichen (nur Buchstaben, Zahlen, - und _).",    "usernameTooShort": "Der Benutzername muss mindestens 3 Zeichen lang sein.",
     "usernameTooLong": "Der Benutzername darf höchstens 15 Zeichen enthalten.",
     "passwordTooShort": "Das Passwort muss mindestens 10 Zeichen lang sein.",
-    "passwordNoNumber": "Das Passwort muss mindestens eine Zahl enthalten.",    "networkError": "Netzwerkfehler. Bitte überprüfe deine Verbindung."
+    "passwordNoNumber": "Das Passwort muss mindestens eine Zahl enthalten.",
+    "networkError": "Netzwerkfehler. Bitte überprüfe deine Verbindung."
   },
 
   "pong": {
@@ -107,7 +108,7 @@
     "playerPlaceholder": "Spielername {{i}}",
     "emptyNames": "Alle Spielernamen dürfen nicht leer sein",
     "emptyPlayerName": "Spielername darf nicht leer sein",
-    "duplicateNames": "Alle Spielernamen müssen einzigartig sein",
+
     "duplicatePlayerNames": "Alle Spielernamen müssen einzigartig sein",
     "playerNameTooShort": "Spielername muss mindestens 3 Zeichen lang sein",
     "playerNameTooLong": "Spielername darf maximal 15 Zeichen lang sein",
