--- a/frontend/src/locales/de.json
+++ b/frontend/src/locales/de.json
@@ -8,6 +8,7 @@
     "playOnline": "Online spielen",
     "playFriend": "Mit Freund spielen",
     "tournament": "Turnier",
+    "onlineTournament": "Online Turnier",
     "loginButton": "Anmelden",
     "logoutButton": "Abmelden",
     "profileButton": "Profil",
