--- a/frontend/src/locales/hu.json
+++ b/frontend/src/locales/hu.json
@@ -8,6 +8,7 @@
     "playOnline": "Online játék",
     "playFriend": "Játék baráttal",
     "tournament": "Bajnokság",
+    "onlineTournament": "Online bajnokság",
     "loginButton": "Bejelentkezés",
     "logoutButton": "Kijelentkezés",
     "profileButton": "Profil",
