--- a/frontend/src/locales/ru.json
+++ b/frontend/src/locales/ru.json
@@ -8,6 +8,7 @@
     "playOnline": "Играть онлайн",
     "playFriend": "Играть с другом",
     "tournament": "Турнир",
+    "onlineTournament": "Онлайн турнир",
     "loginButton": "Войти",
     "logoutButton": "Выйти",
     "profileButton": "Профиль",
