--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -8,6 +8,7 @@
     "playOnline": "Play Online",
     "playFriend": "Play with Friend",
     "tournament": "Tournament",
+    "onlineTournament": "Online Tournament",
     "loginButton": "Log in",
     "logoutButton": "Log out",
     "profileButton": "Profile",
