feat: add game invitation message to chat and update UI for friends list

--- a/frontend/src/locales/hu.json
+++ b/frontend/src/locales/hu.json
@@ -186,7 +186,8 @@
     "blockError": "Hiba történt a felhasználó tiltásakor.",
     "blockConfirmPrefix": "Biztosan le szeretnéd tiltani:",
     "blockConfirmSuffix": "Ezután nem tudsz üzenetet küldeni vagy fogadni tőle.",
-    "inviteButton": "🎮 Meghívás"
+    "inviteButton": "🎮 Meghívás",
+    "gameInvitationMessage": "Játékmeghívó! 🎮 {{link}} 🎮"
   },
 
   "edit": {
