--- a/frontend/src/locales/ru.json
+++ b/frontend/src/locales/ru.json
@@ -185,7 +185,8 @@
     "blockError": "Ошибка при блокировке пользователя.",
     "blockConfirmPrefix": "Вы уверены, что хотите заблокировать",
     "blockConfirmSuffix": "Вы больше не сможете отправлять или получать сообщения от этого пользователя.",
-    "inviteButton": "🎮 Пригласить"
+    "inviteButton": "🎮 Пригласить",
+    "gameInvitationMessage": "Приглашение в игру! 🎮 {{link}} 🎮"
   },
 
   "edit": {
