--- a/frontend/src/locales/de.json
+++ b/frontend/src/locales/de.json
@@ -185,7 +185,8 @@
     "blockError": "Beim Sperren des Benutzers ist ein Fehler aufgetreten. Bitte versuche es erneut.",
     "blockConfirmPrefix": "Bist du sicher, dass du",
     "blockConfirmSuffix": "sperren möchtest? Du kannst keine Nachrichten mehr mit diesem Benutzer senden oder empfangen.",
-    "inviteButton": "🎮 Einladen"
+    "inviteButton": "🎮 Einladen",
+    "gameInvitationMessage": "Spieleinladung! 🎮 {{link}} 🎮"
   },
 
   "edit": {
